adicionando cores ao card principal e box shadow

--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
 
 :root {
     --cor-vermelho-principal: #e94141;
-    --cor-body-principal: #263238;
+    --cor-body-principal: #f5f6f7;
     --cor-branco-principal: #FFFFFF;
+    --cinza-principal: #97979d;
+    --branco-secundario: #f5f6f7;
 }
 
 
