adicionando no script a função de alterar o background color do card tipo de acordo com o tipo do pokemon

--- a/styles/card.css
+++ b/styles/card.css
@@ -25,3 +25,10 @@
     flex-direction: column;
     padding: 8px;
 }
+.card__nome{
+    align-items: center;
+    font-size: 28px;
+}
+.card__tipo{
+    align-items: center;
+}
