adicionando bordas a imagem default e tirando o tipo do pokemon da escrita

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --cor-branco-principal: #FFFFFF;
     --cinza-principal: #97979d;
     --branco-secundario: #f5f6f7;
+    --preto-principal: #000000;
 }
 
 
