adicionando o botao de prev e next para avançar os pokemons sem precisar pesquisar sempre

--- a/styles/card.css
+++ b/styles/card.css
@@ -43,3 +43,12 @@
   height: 105px;
   border-radius: 32px;
 }
+.card__botao-next{
+    margin-top: 16px;
+    border-radius: 8px;
+    
+}
+
+.card__botao-prev{
+    border-radius: 8px;
+}
