--- a/styles/card.css
+++ b/styles/card.css
@@ -102,7 +102,7 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 
 }
@@ -113,7 +113,7 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 }
 
@@ -123,7 +123,7 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 }
 
@@ -133,7 +133,7 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 }
 
@@ -143,7 +143,7 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 }
 
@@ -153,6 +153,6 @@
   margin: 8px;
   border-radius: 6px;
   font-size: 14px;
-  color: var(--cor-branco-principal);
+  color: var(--preto-principal);
   text-align: center;
 }
