--- a/styles/card.css
+++ b/styles/card.css
@@ -30,11 +30,13 @@
   background-color: var(--cor-branco-principal);
   flex-direction: column;
   padding: 8px;
+  font-family: var(--fonte-principal);
 }
 .card__nome {
   padding: 8px;
   align-items: center;
-  font-size: 28px;
+  font-size: 24px;
+  font-family: var(--fonte-secundaria);
 }
 .card__tipo {
   align-items: center;
@@ -42,15 +44,17 @@
   border-radius: 8px;
   width: 64px;
   text-align: center;
+
 }
 
 .card__imagem {
   padding-top: 12px;
-  max-width: 115px;
-  height: 115px;
+  max-width: 125px;
+  height: 125px;
   border-radius: 32px;
   padding: 8px;
   transition: transform 0.3s ease;
+
 }
 
 .card__imagem:hover {
@@ -72,24 +76,31 @@
   text-align: center;
   gap: 8px;
   padding: 8px;
+  display: block;
 }
 .vida{
   padding-bottom: 1px;
+  font-family: var(--fonte-principal);
 }
 .ataque{
   padding-top: 8px;
+  font-family: var(--fonte-principal);
 }
 .defesa{
   padding-top: 6px;
+  font-family: var(--fonte-principal);
 }
 .especialAtaque{
   padding-top: 6px;
+  font-family: var(--fonte-principal);
 }
 .especialDefesa{
   padding-top: 6px;
+  font-family: var(--fonte-principal);
 }
 .velocidade{
   padding-top: 6px;
+  font-family: var(--fonte-principal);
 }
 
 
@@ -155,4 +166,23 @@
   font-size: 14px;
   color: var(--preto-principal);
   text-align: center;
+}
+
+
+
+
+
+@media(max-width: 375px){
+  .container__informacoes-pokemon{
+    display: flex;
+    flex-direction: column;
+  }
+   
+   
+.stats{
+ display: none;
+}
+
+
+
 }
