modificando style do footer

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,10 +8,9 @@
 
 .rodape__informacao{
     text-align: center;
-   align-items: center;
+    justify-content: center;
     font-family: var(--fonte-principal);
     color: var(--cor-branco-principal);
     font-size: 8px;
     padding: 16px;
-    
 }
