--- a/styles/card.css
+++ b/styles/card.css
@@ -1,7 +1,6 @@
 .container__card__pokemon {
   background-color: var(--branco-secundario);
-  max-width: 400px;
-  max-height: 420px;
+  max-width: 1200px;
   padding-bottom: 100px;
 }
 
@@ -187,7 +186,7 @@
   text-align: center;
   align-items: center;
  display: none;
-
+ margin-bottom: 64px;
 }
 
 
